--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <!-- Do not require a touchscreen so the app remains available to non-touch devices like Chromebooks -->
+    <uses-feature android:name="android.hardware.touchscreen" android:required="false"/>
 
     <application
         android:allowBackup="true"
