App edge-to-edge  Changes

--- a/gradle.properties
+++ b/gradle.properties
@@ -27,3 +27,6 @@ org.gradle.jvmargs=-Xmx1536m
 
 # Uncomment and set this to your JDK 17+ installation path if you still get JVM errors:
 org.gradle.java.home=C:\\Program Files\\Java\\jdk-17
+
+# Suppress AGP warning about compileSdk=35 while staying on AGP 8.4.2
+android.suppressUnsupportedCompileSdk=35
